--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,42 +1,208 @@
-
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 body, html {
-    background-color: bisque;
+  background-color: white;
 }
-.appContainer {
-    width: 100vw;
-    height: 100vh;
-    border: 1px solid red;
-    display: grid;
-    grid-template-areas: 
-     'header header'
-     'productList cart'
-     'footer footer';
-     grid-template-rows: 100px auto 100px;
-}
-.header {
-    grid-area: header;
-    border: 1px solid green;
 
+.appContainer {
+  width: 100vw;
+  height: 100vh;
+  border: 1px solid #222;
+  display: -ms-grid;
+  display: grid;
+      grid-template-areas: 'header header' 'productList cart' 'footer footer';
+  -ms-grid-rows: 70px auto 70px;
+      grid-template-rows: 70px auto 70px;
+  -ms-grid-columns: 50% 50%;
+      grid-template-columns: 50% 50%;
+}
+
+.header {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-area: header;
+  background-color: #3578E5;
+  display: -ms-grid;
+  display: grid;
+      grid-template-areas: 'logo-container main-container cart-item-container';
+  -ms-grid-columns: 25% 50% 25%;
+      grid-template-columns: 25% 50% 25%;
 }
 
 .footer {
-    grid-area: footer;
-    border: 1px solid green;
+  -ms-grid-row: 3;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-area: footer;
+  background-color: #3578E5;
 }
 
 .productList {
-    grid-area: productList;
-    border: 1px solid aquamarine;
+  -ms-grid-row: 2;
+  -ms-grid-column: 1;
+  grid-area: productList;
+  max-height: 100%;
+  overflow: scroll;
 }
-.productDetails {
-    margin: 5px;
-    height: 30px;
-    border: 1px solid blue;
-    background-color: grey;
+
+.product-detail {
+  margin: 5px;
+  display: -ms-grid;
+  display: grid;
+      grid-template-areas: 'product-img product-dsc btn-section';
+  -ms-grid-columns: 25% 50% 25%;
+      grid-template-columns: 25% 50% 25%;
+  grid-auto-rows: 150px;
+  border: 1px solid #222;
+  border-radius: 4px;
+  -webkit-transform: scale(0.98);
+          transform: scale(0.98);
+  -webkit-transition: all .4s ease-in;
+  transition: all .4s ease-in;
 }
+
+.product-detail:hover {
+  -webkit-transform: scale(1);
+          transform: scale(1);
+  -webkit-box-shadow: 2px 2px 10px rgba(8, 146, 238, 0.5);
+          box-shadow: 2px 2px 10px rgba(8, 146, 238, 0.5);
+}
+
+.cart {
+  -ms-grid-row: 2;
+  -ms-grid-column: 2;
+  grid-area: cart;
+  padding: 5px;
+}
+
+.cart-item {
+  width: 100%;
+  height: 50px;
+  border: 1px solid #222;
+}
+
+.product-img {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  grid-area: product-img;
+  display: -ms-grid;
+  display: grid;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+.product-dsc {
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
+  grid-area: product-dsc;
+  display: -ms-grid;
+  display: grid;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.btn-section {
+  -ms-grid-row: 1;
+  -ms-grid-column: 3;
+  grid-area: btn-section;
+  display: -ms-grid;
+  display: grid;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.btn-section .add-to-cart-btn {
+  width: 100px;
+  height: 30px;
+  padding: 5px;
+  border-radius: 5px;
+  background-color: #3578E5;
+  color: white;
+}
+
+.btn-section .add-to-cart-btn:hover {
+  background-color: #06398a;
+}
+
+@media only screen and (max-width: 600px) {
+  .appContainer {
+        grid-template-areas: 'header' 'productList' 'footer';
+    -ms-grid-columns: 100%;
+        grid-template-columns: 100%;
+  }
+  .cart {
+    display: none;
+  }
+}
+
+.logo-container {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  grid-area: logo-container;
+}
+
+.main-container {
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
+  grid-area: main-container;
+}
+
+.cart-item-container {
+  -ms-grid-row: 1;
+  -ms-grid-column: 3;
+  grid-area: cart-item-container;
+  display: -ms-grid;
+  display: grid;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.item-counter {
+  display: block;
+  width: 1000px / 10px;
+  height: 30px;
+  border: 1px solid 1px solid #222;
+  background-color: white;
+  padding: 10px;
+  text-align: center;
+  -webkit-transition: -webkit-transform 0.5s ease;
+  transition: -webkit-transform 0.5s ease;
+  transition: transform 0.5s ease;
+  transition: transform 0.5s ease, -webkit-transform 0.5s ease;
+  -webkit-transform: scale(0.96);
+          transform: scale(0.96);
+}
+
+.item-counter:hover {
+  -webkit-transform: scale(1);
+          transform: scale(1);
+}
+
+.form-div {
+  margin: auto;
+  width: 50%;
+  height: 50%;
+  border: 2px solid green;
+  padding: 10px;
+  position: relative;
+}
+/*# sourceMappingURL=style.css.map */
